@@ -1,3 +1,9 @@
+2013-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* Stefan Neudorf: 31935: Doc/Zsh/builtins.yo,
+	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c: further
+	limit updates for 31930, 39134.
+
 2013-10-31  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* Stefan Neudorf: 31930 / 31934: Doc/Zsh/builtins.yo,
